class UserModel {
  String uid;
  String name;
  String email;

  UserModel({required this.uid, required this.email, required this.name});
}
